Configuracion/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: LoadBalancer  #Utiliza LoadBalancer para exposición externa
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress
