Configuracion/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:5.8.3-php7.4-apache
          ports:
            - containerPort: 80
          volumeMounts:
          - name: nfs
            mountPath: /var/www/html
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
---
apiVersion: v1
kind: Service
spselector:
  tyapp: wordpresserrvice
  ports:
    - port: 80
