Configuracion/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-production
spec:
  tls:
    - hosts:
      - projectonellereafitxd.software
      secretName: cert-testing
  rules:
    - host: projectonellereafitxd.software
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
